--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,9 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Week#4Tutorial</a>
-    </div>
-
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#" >HOME</a></li>
-        <li><a href="#" >Recipes</a></li>
-        <li><a href="#" >Shopping List</a></li>
-      </ul>
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
-          </ul>
-        </li>
-      </ul> -->
-      <app-login></app-login>
-      <app-account></app-account>
-    </div>
+<app-header></app-header>
+<div class="container">
+  <div class="col-md-7">
+    <app-login></app-login>
   </div>
-</nav>
+  <div class="col-md-5">
+    <app-account></app-account>
+  </div>
+</div>
