--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<app-header></app-header>
+<app-header (sectionSelected)="onNavigate($event)"></app-header>
 <div class="container">
-  <div class="col-md-7">
+  <div class="col-md-7" *ngIf="selectedSection === 'login'">
     <app-login></app-login>
   </div>
-  <div class="col-md-5">
-    <app-account></app-account>
+  <div class="col-md-5" *ngIf="selectedSection === 'account'">
+    <p *ngIf="!loggedInUser;else showAccount">No Active login</p>
+    <ng-template #showAccount>
+      <app-account></app-account>
+    </ng-template>
   </div>
 </div>
