--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,7 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a href="#" class="navbar-brand">Week#4Tutorial</a>
-      </div>
+
+  <h2>Workshop 4 3813ICT - Software frameworks</h2>
+  <div class="btn-group">
+    <a (click)="onNavigate('login')" class="btn btn-primary">Login</a>
+    <a (click)="onNavigate('account')" class="btn btn-default">Account</a>
+  </div>
   
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#" (click)="onSelect('home')">HOME</a></li>
-          <li><a href="#" (click)="onSelect('login')">Login</a></li>
-          <li><a href="#" (click)="onSelect('account')">Account</a></li>
-        </ul>
-        <!-- <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Save Data</a></li>
-              <li><a href="#">Fetch Data</a></li>
-            </ul>
-          </li>
-        </ul> -->
-      </div>
-    </div>
-  </nav>
