--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,27 @@
-<app-header (sectionSelected)="onNavigate($event)"></app-header>
-<div class="container">
-  <div class="col-md-7" *ngIf="selectedSection === 'login'">
-    <app-login (userSelected)="selectedUser = $event"></app-login>
-  </div>
-  <div class="col-md-5" *ngIf="selectedSection === 'account'">
-    <p *ngIf="!loggedInUser;else showAccount">No Active login</p>
-    <ng-template #showAccount>
-      <app-account *ngIf="selectedUser; else noAccount"
-        [user]="selectedUser">
-      </app-account>
-        <ng-template #noAccount>
-          <p>Please Login to view Account!</p>
-        </ng-template>
-    </ng-template>
-  </div>
-</div>
+<div class="container">                                        <!-- Conatiner -->
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">Week#4Tutorial</a>
+      </div>
+  
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/">Home</a></li>
+          <li role="presentation" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+          <li role="presentation" routerLinkActive="active"><a [routerLink]="['account']">Account</a></li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+
+
+  <div class="row">                        <!-- Row -->
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <router-outlet></router-outlet>
+    </div>
+  </div>                                   <!-- Row -->
+  
+</div>                                                       <!-- Conatiner -->
